Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,6 @@ button {
 }
 
 .author {
-    display: block;
     width: 95%;
     text-align: end;
     font-size: 24px;
